[package]
authors = ["willemml <willem@leit.so>"]
edition = "2018"
name = "rusty-watchy"
resolver = "2"
version = "0.1.0"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z" 

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
dummy-pin = "0.1.1"
embedded-graphics = "0.7.1"
embedded-hal = "1.0.0-alpha.7"
epd_driver = {git = "https://github.com/willemml/ssd1681", branch = "version_bump"}
esp-idf-hal = {version = "0.33.2"}
esp-idf-sys = {version = "0.30.6", features = ["binstart"]}

[build-dependencies]
anyhow = "1"
embuild = "0.28"
